--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "engines": {
-    "node": ">=20.0.0 <21.0.0"
+    "node": "^20.0.0",
+     "npm": "9.x"
   },
   "scripts": {
     "dev": "npx nx run-many --target=serve --projects=frontend,backend,workers --parallel=4",
