--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "engines": {
     "node": "^20.0.0",
-     "npm": "9.x"
+     "npm": "9.x",
+     "missing-module": "^1.0.0"
   },
   "scripts": {
     "dev": "npx nx run-many --target=serve --projects=frontend,backend,workers --parallel=4",
